syntax = "proto3";
package nl.svsticky.chroma;

message User {
  int32 id = 1;
  string name = 2;
}

message UserScope {
  string name = 1;
  int32 grantedBy = 2;
  int64 grantedAt = 3;
}